--- a/oefening_vakantie/WebContent/index.html
+++ b/oefening_vakantie/WebContent/index.html
@@ -2,9 +2,78 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home</title>
+<link rel="stylesheet" href="css/bootstrap.css">	
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<p>Hallo</p>
+
+
+<div class="container-fill">
+	
+	<ul class="nav nav-pills navbar-inverse row ">
+		<li class="col-lg-2 col-md-3 col-xs-3">
+			<a class="active" href="#">Waar was ik</a>
+		</li>
+		<li class="col-lg-2 col-md-3 col-xs-3">
+			<a href="#">Hoe was dat</a>
+		</li>
+		<li class="col-lg-2 col-md-3 col-xs-3">
+		   	<a  href="#">Comment</a>
+		</li>
+	</ul>
+</div>
+<div class="container">	
+		<h1>Waar was Jarno</h1>
+		
+		<div class="row col-xs-offset-1">
+			<h3 >Op reis</h3>
+			<div class="col-md-8" style="padding: 0 2vw;">
+			<p>Mijn eerste hoogtepunt was Monaco, waar men garages voor Ferrari's hebben op elke hoek. In Monaco gaat ook een F1 race door. We liepen eens langs het parcour en dat was wel eens tof.
+			We kunnen natuurlijk ook de luxehotels en restaurants niet vergeten. Alles is daar met een redelijk prijskaartje dus we waagden ons niet op het strand.
+			De foto die je hier ziet is ook getrokken in Monaco. Wel vreemd dat mijn favoriete plek een ondergrondse garage was. (foto 1)</p>
+			<p>Mijn tweede hoogtepunt was Cannes. Hier bezochten we de boulevard met de handafdrukken in de stenen. We passeerden ook langs de plek van het filmfestival en hier gingen we wel eens op het strand.
+			Dan konden we de cruiseschepen wat beter bewonderen. Ook hier waren geen lelijke auto's. (foto 2)</p>
+			<p>Als last but not least hebben we een bergtocht gedaan in de auto. Dit was een prachtige ervaring. De zichten die je zag benam je je adem.</p>
+			</div>
+			<div id="bc" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#bc" data-slide-to="0" class="active"></li>
+				<li data-target="#bc" data-slide-to="1"></li>
+			</ol>
+			<div class="col-md-3">
+			<div class="carousel-inner">
+				<div class="item active">
+					<img alt="" src="media/monaco.png" width="800px">
+				</div>
+			
+				<div class="item">
+					<img alt="" src="media/cannes.png" width="800px">
+				</div>
+			</div>
+			<a class="left carousel-control" href="#bc" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			
+			<a class="right carousel-control" href="#bc" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right"></span>
+			</a>
+			
+		</div>
+			</div>
+		
+		</div>
+		
+		<div class="col-xs-offset-1">
+			<h3>Molweekend</h3>
+			
+		</div>
+</div>	
+	<script src="https://code.jquery.com/jquery-1.11.0.js" integrity="sha256-zgND4db0iXaO7v4CLBIYHGoIIudWI5hRMQrPB20j0Qw=" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.js"></script>
+	
+	
 </body>
 </html>
