--- a/oefening_vakantie/WebContent/index.html
+++ b/oefening_vakantie/WebContent/index.html
@@ -15,13 +15,13 @@
 	
 	<ul class="nav nav-pills navbar-inverse row ">
 		<li class="col-lg-2 col-md-3 col-xs-3">
-			<a class="active" href="#">Waar was ik</a>
+			<a href="index.html">Waar was ik</a>
 		</li>
 		<li class="col-lg-2 col-md-3 col-xs-3">
-			<a href="#">Hoe was dat</a>
+			<a href="ervaring.html">Hoe was dat</a>
 		</li>
 		<li class="col-lg-2 col-md-3 col-xs-3">
-		   	<a  href="#">Comment</a>
+		   	<a  href="comments.html">Comment</a>
 		</li>
 	</ul>
 </div>
@@ -69,6 +69,8 @@
 		<div class="col-xs-offset-1">
 			<h3>Molweekend</h3>
 			
+			<p class="col-md-10" style="padding: 0 2vw;">Elke 2 jaar spelen wij met een aantal families het spel "De mol", dit jaar ging dit door in Spa. We hebben daar veel gekke dingen gedaan.
+			Het grappigste was dansen op de parking voor het stadhuis van de stad. Daarmee hebben we wel €1000 in de pot gekregen. Het was een onvergeetbaar weekend met veel verrasingen.</p>
 		</div>
 </div>	
 	<script src="https://code.jquery.com/jquery-1.11.0.js" integrity="sha256-zgND4db0iXaO7v4CLBIYHGoIIudWI5hRMQrPB20j0Qw=" crossorigin="anonymous"></script>
