--- a/oefening_vakantie/WebContent/index.html
+++ b/oefening_vakantie/WebContent/index.html
@@ -36,7 +36,7 @@
 			De foto die je hier ziet is ook getrokken in Monaco. Wel vreemd dat mijn favoriete plek een ondergrondse garage was. (foto 1)</p>
 			<p>Mijn tweede hoogtepunt was Cannes. Hier bezochten we de boulevard met de handafdrukken in de stenen. We passeerden ook langs de plek van het filmfestival en hier gingen we wel eens op het strand.
 			Dan konden we de cruiseschepen wat beter bewonderen. Ook hier waren geen lelijke auto's. (foto 2)</p>
-			<p>Als last but not least hebben we een bergtocht gedaan in de auto. Dit was een prachtige ervaring. De zichten die je zag benam je je adem.</p>
+			<p>Als last but not least hebben we een bergtocht gedaan in de auto. Dit was een prachtige ervaring. De zichten die je zag benamen je je adem.</p>
 			</div>
 			<div id="bc" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
